# rust-todo

./: .gitignore  compose.yaml
app/: Cargo.toml  Dockerfile
app/db/migrations/: 20251023185416_create_users_table.sql  20251023185526_create_lists_table.sql
app/migrations/: 20251023185416_create_users_table.sql  20251023185752_create_items_table.sql  20251023205746_create_shares_table.sql
app/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  schemas.rs
app/src/db/: helpers.rs  test_helpers.rs
app/src/handlers/: lists.rs  users.rs
app/src/models/: items.rs  list.rs  lists.rs  user.rs
app/src/models/list/: items.rs
app/src/routes/: lists.rs  users.rs
app/src/schemas/: environment.rs  requests.rs
