[package]
name = "rust-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
